--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-    "name": "candocker/hyperf-system",
+    "name": "candocker/skeleton",
     "type": "project",
     "keywords": [
         "php",
         "swoole",
         "framework",
         "hyperf",
+        "passport",
         "microservice",
         "middleware"
     ],
@@ -15,14 +16,20 @@
         "illuminate/hashing": "^6.5",
         "gregwar/captcha": "^1.1",
         "doctrine/annotations": "^1.10",
-        "swoolecan/baseapp": "dev-main"
+        "swoolecan/baseapp": "dev-main",
+        "hyperf/rpc-client": "^2.1",
+        "phper666/jwt-auth": "~3.0.4",
+        "hyperf/filesystem": "^2.1",
+        "xxtime/flysystem-aliyun-oss": "^1.5",
+        "candocker/passport": "dev-main",
+        "aliyuncs/oss-sdk-php": "^2.4",
+        "psr/cache": "^1.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.4",
         "phpmd/phpmd": "^2.6",
         "friendsofphp/php-cs-fixer": "^2.14",
         "mockery/mockery": "^1.0",
-        "doctrine/common": "^2.9",
         "phpstan/phpstan": "^0.12"
     },
     "suggest": {
@@ -35,10 +42,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        },
-        "files": [
-            "app/Helpers/Function.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
